--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css?family=Satisfy");
+
+*{
+  box-sizing: border-box;
+}
+body{
+  margin: 0;
+  font-family: "Satisfy", "Comic Sans MS";
+  font-size: 22px;
+}
+
+a{
+  text-decoration: none;
+}
+
